# cooklang-ingredient-indexer

./: Cargo.toml  LICENSE  README.md  ingredient-index.html  license.txt
examples/: basic.rs
src/: lib.rs  main.backup.rs  main.rs
tests/: integration_test.rs
