[package]
name = "cooklang-indexer"
version = "0.1.0"
edition = "2021"
description = "A library for indexing and generating HTML indexes of cooklang recipe ingredients"
license = "MIT"  

[lib]
name = "cooklang_indexer"
path = "src/lib.rs"

[[bin]]
name = "cooklang-indexer"
path = "src/main.rs"

[dependencies]
walkdir = "2.3"
regex = "1.5"
anyhow = "1.0"
urlencoding = "2.1"


